[package]
name = "b3"
description = "A cross-platform UI framework"
authors = ["Denis Sologub <ds.sologub@ya.ru>"]
version = "0.1.2"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/Klein-Stein/b3"
homepage = "https://github.com/Klein-Stein/b3"
readme = "README.md"
keywords = ["b3"]
categories = ["os"]
documentation = "https://docs.rs/crate/b3/latest"
exclude = [
    ".vscode/*",
    "github/*",
]

[dependencies]
b3-display-handler = "0.1.2"
