[package]
name = "b3-gui"
description = "Backend-independent GUI framework"
authors = ["Denis Sologub <ds.sologub@ya.ru>"]
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"
repository = "https://github.com/Klein-Stein/b3-framework"
homepage = "https://github.com/Klein-Stein/b3-framework"
readme = "README.md"
keywords = ["b3"]
categories = ["os"]
documentation = "https://docs.rs/crate/b3-gui/latest"

[dependencies]
b3-display-handler = "0.1.2"
